# remem

./: .dockerignore  .env.example  .gitignore  =5.0.0  API_DOCS.md  API_DOCUMENTATION.md  CLAUDE.md  CONFIG_API.md  CONTEXTUAL_GROUNDING.md  CONTEXT_AWARE_FIX_SUMMARY.md  CONVERSATION_HISTORY_FIX.md  DUPLICATE_PREVENTION_IMPROVEMENTS.md  Dockerfile  EXAMPLES.md  LANGCACHE_CONFIGURATION.md  LANGCACHE_SETUP.md  LANGGRAPH_MEMORY_IMPROVEMENTS.md  LLM_CONFIGURATION.md  MCP_SETUP.md  MEMORY_EXTRACTION_IMPROVEMENTS.md  MIGRATION_SUMMARY.md  Makefile  README.md  REFACTORING_SUMMARY.md  RELEVANCE_SCORING.md  REST_API_DOCS.md  WEB_UI_README.md  agent.py  augment-user-guidelines.md  cli.py  cursor_mcp_config.json  demo_context_grounding.py  docker-compose.yml  langcache_client.py  langgraph_memory_agent.py  llm_config_examples.json  llm_manager.py  main.py  mcp_config.json  mcp_server.py  (+30 more)
api/: __init__.py  app.py  dependencies.py  startup.py
api/core/: __init__.py  config.py  constants.py  exceptions.py  utils.py
api/models/: __init__.py  agent.py  async_memory.py  (+3 more)
clients/: __init__.py  langcache_client.py
demos/: calendar_memory_demo.py  example_extract_usage.py
docs/: AGENT_API_MIGRATION.md  API_DOCUMENTATION.md  ASYNC_MEMORY_SYSTEM.md  CONTEXT_AWARE_FIX_SUMMARY.md  CONTEXT_AWARE_MEMORY_EXTRACTION.md  DUPLICATE_PREVENTION_FIXES.md  DUPLICATE_PREVENTION_IMPROVEMENTS.md  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  LANGGRAPH_MEMORY_IMPROVEMENTS.md  LLM_CONFIGURATION.md  MCP_LANGCACHE_INTEGRATION.md  MCP_SERVER_README.md  MEMORY_EXTRACTION_IMPROVEMENTS.md  MIN_SIMILARITY_DOCS.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  SEMANTIC_CACHE_UPGRADE.md  augment-user-guidelines.md  claude_desktop_config_example.json  llm_config_design.md
embedding/: __init__.py  embedding_client.py  embedding_config_examples.json
llm/: __init__.py
memory/: __init__.py  agent.py  async_processor.py  core.py  core_agent.py  debug_utils.py  extraction.py  processing.py  reasoning.py  tools.py
optimizations/: llm_cache.py  optimized_extraction.py  optimized_processing.py  performance_optimizer.py  semantic_cache.py
scripts/: run_mcp_server.sh  setup_mcp_server.py
templates/: chat_demo.html  index.html
tests/: README.md  run_cli_tests.py  test_access_tracking.py  test_agent_vectorstore.py  test_async_memory.py  test_cache_fix.py  test_chat_api.py  test_cli.py  test_cli_comparison.py  test_cli_integration.py  test_cli_simple.py  test_cli_static_analysis.py  test_comparison.sh  test_confidence_fix.py  test_config_api.py  test_config_simple.py  test_context_aware_extraction.py  test_context_grounding.py  test_conversation_history.py  test_core_timestamps.py  test_duplicate_prevention.py  test_early_caching.py  test_embedding_config.py  test_embedding_integration.py  test_enhanced_agent_chat.py  test_extract_memories.py  test_filter_functionality.py  test_improved_chat.py  test_json_response.py  test_langcache.py  test_langcache_config.py  test_langgraph_memory_agent.py  test_llm_config.py  test_mcp_server.py  test_memory_agent.py  test_memory_chat.py  test_memory_extraction.py  test_mixed_memory_types.py  test_new_api.py  test_no_backward_compatibility.py  (+14 more)
(+14 files in other folders)
